<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.hompage.fragment.HomepageFragment"
    tools:openDrawer="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/pink_200"
                android:elevation="@dimen/dp_4"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <FrameLayout
                android:id="@+id/homeFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cherub_100" />
        </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/pink_200">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/separatorTopView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginTop="@dimen/dp_16"
                    android:background="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

                <TextView
                    android:id="@+id/noteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/note"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/fivePercentGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/separatorTopView" />

                <TextView
                    android:id="@+id/allNoteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="@string/all_note"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/allNoteImageView"
                    app:layout_constraintTop_toTopOf="@+id/allNoteImageView" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/tenPercenGuideLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.1" />

                <TextView
                    android:id="@+id/favoriteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="@string/favorite"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/favoriteImageView"
                    app:layout_constraintTop_toTopOf="@+id/favoriteImageView" />

                <TextView
                    android:id="@+id/deleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="@string/deleted"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/deleteImageView"
                    app:layout_constraintTop_toTopOf="@+id/deleteImageView" />

                <View
                    android:id="@+id/separatorBotView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginTop="@dimen/dp_16"
                    android:background="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/deleteTextView" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/fivePercentGuideLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <ImageView
                    android:id="@+id/allNoteImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:src="@drawable/ic_note_24"
                    app:layout_constraintStart_toStartOf="@+id/tenPercenGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/noteTextView" />

                <ImageView
                    android:id="@+id/favoriteImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:src="@drawable/ic_favorite_24"
                    app:layout_constraintStart_toStartOf="@+id/tenPercenGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/allNoteImageView" />

                <ImageView
                    android:id="@+id/deleteImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:src="@drawable/ic_delete_24"
                    app:layout_constraintStart_toStartOf="@+id/tenPercenGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteImageView" />

                <TextView
                    android:id="@+id/categoryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/category"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/fivePercentGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/separatorBotView" />

                <TextView
                    android:id="@+id/newTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/new_category"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/fivePercentGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/categoryRecyclerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoryRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/categoryTextView" />

                <TextView
                    android:id="@+id/loginTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_60"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_30"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

                <TextView
                    android:id="@+id/logoutTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_60"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:text="@string/logout"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_30"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/newTextView"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
